See if Github CI picks up failing tests